fix CSS styles of best room and change scrollbar

--- a/hotel-reservation/src/App.css
+++ b/hotel-reservation/src/App.css
@@ -8,4 +8,22 @@ light gold: e4d58e
   padding: 0;
   font-family: sans-serif;
   box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+:-webkit-scrollbar-track {
+  background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: lightgray;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: gray;
 }
